Shipit: Display bug keywords + use large json objects.
